syntax = 'proto3';

package lexmodo.v1.customers;

option go_package = "lexmodo/proto/customers;customers";


import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

import "address.proto";
import "orders.proto";

service Customers {

    rpc CustomerPasswordResetToken(CustomerResetPassword) returns(ResultResponse){}
    rpc CustomerPasswordReset(CustomerResetPassword) returns(ResultResponse){}
    rpc CustomerLogin(CustomerLoginRequest) returns(ResultResponse){}

    rpc CustomerSearch(CustomerSearchRequest) returns(ResultResponse){
         option (google.api.http) = {
            get: "/customer/search/{search_query}"
        };       
    }


	rpc CreateCustomer(CreateCustomerRequest) returns (ResultResponse) {
        option (google.api.http) = {
            put: "/customer",
            body: "*"
        };
    }

    rpc GetCustomerRule(google.protobuf.Empty) returns(ResultResponse){
         option (google.api.http) = {
            get: "/customer/rule"
        };       
    }
    
	rpc GetCustomerByID(CustomerIdRequest) returns (ResultResponse) {
        option (google.api.http) = {
            get: "/customer/{customer_id}"
        };
    }    
	rpc GetCustomerAddress(CustomerIdRequest) returns (ResultResponse) {
        option (google.api.http) = {
            get: "/customer-address/{customer_id}"
        };
    } 
    rpc GetCustomerBasicInfoByID(CustomerIdRequest) returns (ResultResponse) {
        option (google.api.http) = {
            get: "/customers/{customer_ids}"
        };
    }  


    rpc ConfrimCustomerRuleExists(CustomerRuleRequest) returns (ResultResponse) {
        option (google.api.http) = {
            put: "/customer/rule/exists",
            body: "*"
        };
    }

	rpc DeleteCustomer(CustomerIdRequest) returns (ResultResponse) {
        option (google.api.http) = {
            delete: "/customer/{customer_id}"
        };
    }


	rpc UpdateCustomer(CustomerInfo) returns (ResultResponse) {
        option (google.api.http) = {
            post: "/customer/{customer_id}",
            body: "*"
        };
    }


	rpc CreateAddress(AddressInfoRequest) returns (ResultResponse) {
        option (google.api.http) = {
            put: "/customer/{customer_id}/address",
            body: "*"
        };
    }

	rpc DeleteAddress(AddressIdRequest) returns (ResultResponse) {
        option (google.api.http) = {
            delete: "/customer/{customer_id}/address/{address_id}"
        };
    }

	rpc UpdateAddress(AddressInfoRequest) returns (ResultResponse) {
       
    }

    rpc CreateCustomerRule(CustomerRuleRequest) returns (ResultResponse) {
        option (google.api.http) = {
            put: "/customer/rule",
            body: "*"
        };
    }

    rpc DeleteCustomerRule(CustomerRuleRequest) returns (ResultResponse) {
        option (google.api.http) = {
            delete: "/customer/rule/{rule_id}"
        };
    }

    rpc GetCustomerListing(CustomerListing) returns (ResultResponse) {
        option (google.api.http) = {
            get: "/customer/rule/{rule_id}"
        };
    }

    rpc GetCustomerEmailLog(CustomerIdRequest) returns (ResultResponse) {
        option (google.api.http) = {
            get: "/customer/email/{rule_id}"
        };
    }

    rpc GetEmailContents(EmailLog) returns (stream ResultResponse) {
        option (google.api.http) = {
            get: "/customer/email/content/{email_id}"
        };
    }
    rpc ResendEmail(EmailLog) returns ( ResultResponse) {
        option (google.api.http) = {
            get: "/customer/email/resend/{email_id}"
        };
    }

    rpc NotifyCustomer(CustomerNotify) returns ( ResultResponse) {
        option (google.api.http) = {
            get: "/customer/email/send/{email_id}"
        };
    }


    rpc CustomerPartOfRule(ApplyRuleToCustomerRequest) returns ( ResultResponse) {
        option (google.api.http) = {
            get: "/customer/part/rule/{email_id}"
        };
    }

}

message CustomerNotify{
    EmailLog email = 1;
    CustomerInfo customer =2;
    uint64 delay_task =3;
}

message EmailStatus{
    string status =1;
    string description = 2;
    uint64 transaction_date =3;

}
message EmailLog{

    string email_id =1; 
    repeated EmailStatus email_status =2;
    string email_subject = 3;
    bytes email_content = 4;
    uint64 email_created_on = 5;
    string email_sent_to = 6;
}

message CustomerSearchRequest {
    string search_query = 1;
    uint32 page_num = 2;
    repeated string customer_searchable_fields = 3;
}

message CustomerIdRequest{
	string customer_id =1;
    repeated string customer_ids = 2;
}

message AddressIdRequest{

	string customer_id =1;
	string address_id =2;
}
message Customernotes{

	string added_by =1;
	string comment = 2;
	uint32 date_added =3;
}

message RuleReplace{

    string customer_id = 1;
    uint32 before_customer_id = 2;

}

message RuleSortBy {

    string column_name =1;
    enum SORT{
        asc =0;
        desc=1;
    }
    SORT sort_order =2;
}

message ApplyRuleToCustomerRequest{
    repeated CustomerRuleRequest customers_rules =1;
}

message CustomerRuleRequest{

	string rule_id = 1;
	string rule_name = 2;
    string customer_id = 3;
    string rule_query = 4;
    repeated  RuleSortBy sort_by = 5;

    bool store_view = 8;
    repeated RuleReplace sort_cutomers = 9;
    map<string,string> custom_data = 10;
    repeated string rules_id =11;
    uint64 sort_order =12;
} 


message CreateCustomerRequest{
	string customer_first_name =1;
	string customer_last_name =2;
	google.protobuf.StringValue customer_dob = 3;
	string customer_email = 4;	
	repeated string customer_tags = 5;
	google.protobuf.StringValue customer_phone_number =6;
	bool customer_is_guest = 7;
	bytes customer_password = 8;
	map<string,string> customer_custom_info = 9;	
	bool customer_marketing = 10;
	string customer_full_name = 11;
	repeated Customernotes customer_notes =12;
	bool customer_tax_exempt = 13;
	bool customer_is_wholesale = 14;

}

message CreateAddressRequest{
	string customer_id=1;
	lexmodo.v1.address.Address address =2;
    google.protobuf.BoolValue address_is_default_billing_address =3;
    google.protobuf.BoolValue address_is_default_shipping_address =4;
}

message CustomerBasicInfo{

    string customer_id = 1;
    google.protobuf.StringValue customer_first_name =2;
    google.protobuf.StringValue customer_last_name =3;
    google.protobuf.StringValue customer_email = 5;

}
message CustomerResetPassword{
    string customer_id = 1;
    string customer_email = 2;
    bytes password_token = 3;
    bytes new_password = 4;  
    google.protobuf.StringValue customer_first_name =5;
    google.protobuf.StringValue customer_last_name = 6;
}

message CustomerLoginRequest{ 

    string customer_email = 1;
    string customer_password =2;
}

message CustomerInfo{
	string customer_id = 1;
	google.protobuf.StringValue customer_first_name =2;
	google.protobuf.StringValue customer_last_name =3;
	google.protobuf.StringValue customer_dob = 4;
	google.protobuf.StringValue customer_email = 5;
	repeated google.protobuf.StringValue customer_tags = 6;
	repeated Customernotes customer_notes =7;
	google.protobuf.StringValue customer_phone_number =8;
	repeated lexmodo.v1.orders.InvoiceList customer_last_order = 9;
	google.protobuf.BoolValue customer_tax_exempt = 10;
	uint32 customer_total_spent =11;
	uint32 customer_account_created_on = 12;
	google.protobuf.BoolValue customer_is_guest = 13;
	google.protobuf.StringValue customer_full_name = 14;
	google.protobuf.StringValue customer_default_shipping_address_id = 15;
	google.protobuf.StringValue customer_default_billing_address_id =16;
	repeated AddressInfoRequest customer_addresses = 17;
	map<string,string> customer_custom_info = 18;	
	google.protobuf.BoolValue customer_marketing = 19;
	google.protobuf.BytesValue customer_password =20;
	google.protobuf.BoolValue customer_is_wholesale =21;
    google.protobuf.StringValue customer_last_login = 23;
    CustomerAccountStatus customer_account_status = 24;
    google.protobuf.StringValue customer_access_token =25;
    uint64 customer_date_update = 31;
}

message CustomerAccountStatus {
    enum ACCOUNT_STATUS{
        active = 0;
        banned =1;
        locked =3;
    } 
    ACCOUNT_STATUS account_status =1; 
    uint32 account_status_changed_on = 2;
    google.protobuf.StringValue reason = 3;
    google.protobuf.Int32Value expiry_lock = 4;
    uint32 invalid_login = 5;
    google.protobuf.Int32Value invalid_login_time = 6;

}

message AddressInfoRequest {
	string customer_id = 1;

	lexmodo.v1.address.Address address =2;
    google.protobuf.BoolValue address_is_default_shipping_address =3;
    google.protobuf.BoolValue address_is_default_billing_address =4;
	uint32 address_created_on = 5;

}


message CustomerListing{

    string assoicated_rule_id = 1;
    uint32 page_num = 2;
    uint32 total_result = 3;
    uint32 display_result = 4;
    repeated CustomerInfo customer_listing = 5;
    string rule_id = 6;
    string rule_query = 7;
    repeated  RuleSortBy sort_by = 8;
    string pit =9;

}

message ResultResponse{

    bool success = 1;
    bool failure = 2;
    string code = 3;
    string message = 4;
    CustomerInfo customer = 5;
    AddressInfoRequest address = 6;
    CustomerListing customers_listing = 7;
    repeated CustomerRuleRequest rules = 8;
    repeated CustomerBasicInfo customer_basic_info = 9;
    CustomerRuleRequest rule = 10;
    CustomerResetPassword customer_reset_password = 11;
    EmailLog email_log =12;
    repeated EmailLog email_logs =13;
    repeated CustomerListing customers_listings = 14;
}