syntax = 'proto3';

package lexmodo.v1.orders;

option go_package = "bitbucket.org/lexmodo/proto/orders";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "shipping.proto";
import "cart.proto";
import "money.proto";
import "order_modules.proto";
import "payments.proto";
import "invoice_items.proto";
import "address.proto";

service Orders {

    rpc Invoice(OrdersRequest) returns (ResultResponse) {
        option (google.api.http) = {
            get: "/invoice/{invoice_uuid}/{show_only_unpaid_items}"
        };     
    }

    rpc FetchLabel (TrackingInfo) returns (stream ResultResponse) {}
    rpc RefundOrder(RefundRequest) returns (ResultResponse) {}
    rpc PayOrder(OrdersRequest) returns (ResultResponse) {}
	rpc CreateOrder(OrdersRequest) returns (ResultResponse) {}
    rpc CalculatePriceNoOrder(OrdersRequest) returns (ResultResponse) {}
    rpc UpdateOrderLineItems(OrderLineItemsUpdate) returns (ResultResponse) {}
    rpc OrderLineItemPriceAdjust(OrderLineItemPriceAdjustment) returns (ResultResponse) {}
    rpc AddComment(OrdersRequest) returns (ResultResponse) {}
    rpc SetTag(OrdersRequest) returns (ResultResponse) {}
    rpc CustomerValue(OrdersRequest) returns (ResultResponse) {}
    rpc OrderTimeLine(OrdersRequest) returns (ResultResponse) {}
    rpc UpdateOrderModules(OrdersRequest) returns (ResultResponse) {}
    rpc AddCustomer(OrdersRequest) returns (ResultResponse) {}
    rpc AddShippingCost(OrdersRequest) returns (ResultResponse) {}
    rpc AddShippingAddress(OrdersRequest) returns (ResultResponse) {}
    rpc UpdateEmail(OrdersRequest) returns (ResultResponse) {}
    rpc DeleteOrder(OrderLineItemsUpdate) returns (ResultResponse) {}
    rpc ClearOrderDebt(OrdersRequest) returns (ResultResponse) {}
    rpc RefundCalculator(RefundRequest) returns (ResultResponse) {}
    rpc AddCustomModule(OrdersRequest) returns (ResultResponse) {}
    rpc ResetOrderModule(OrdersRequest)  returns (ResultResponse) {}
    rpc ItemsFulfilled(OrderLineItemsUpdate)  returns (ResultResponse) {}
    rpc GetCustomerOrders(OrdersListing) returns (ResultResponse) {}
    rpc SendAmountOwed(OrdersRequest) returns (ResultResponse) {}    
    rpc GetOrderListing(OrdersListing) returns (ResultResponse) {}
    rpc CreateOrderRule(OrdersRuleRequest) returns (ResultResponse) {}
    rpc CreateOrderPayRuleRestrict(OrdersRuleRequest) returns (ResultResponse) {}

    rpc DeleteOrderRule(OrdersRuleRequest) returns (ResultResponse) {}
    rpc GetOrderRule(OrdersEmptyRequest) returns (ResultResponse) {}
    rpc SetOrderLineItemCustomField(OrdersLineItemsCustomFieldRequest) returns  (ResultResponse) {}

    rpc GenerateOPC(OPC) returns (ResultResponse) {}
    rpc GeneratePackingSlip(PackingSlip) returns (ResultResponse) {}
    rpc SavePackingSlipTemplate(PackingSlip) returns (ResultResponse) {}
    rpc GetPackingSlipTemplate(PackingSlip) returns (ResultResponse) {}
    rpc GetOrderTransactionDetails(OrdersRequest) returns  (ResultResponse) {}
    rpc MigrateOrder(MigrateOrderRequest) returns  (ResultResponse) {}

    rpc GetOrderScript(OrderScript) returns (ResultResponse){}
    rpc SaveOrderScript(OrderScript) returns (ResultResponse){}
    rpc DeleteOrderScript(OrderScript) returns (ResultResponse){}
    rpc RunPlaygroundOrder(OrderScript) returns (ResultResponse){}

    rpc GetRecurringSettings(google.protobuf.Empty) returns (ResultResponse){}
    rpc SetRecurringSettings(OrdersRecurringSettings) returns (ResultResponse){}

    rpc OrderSalesReport(OrderReports) returns (ResultResponse){}

}

message OrderScript{
    string script_uuid =1;
    string script_name = 2;
    string script = 3;
    Invoice input_data = 4;
    enum RUN_SCRIPT{
        subtotal = 0;
        taxes=1;
        coupons=2;
        store_credit=3;
        shipping = 4;
        pay_order  = 5;
    } 
    RUN_SCRIPT initiate_at = 5;
    uint32 sort_order = 6;
}
message OrdersScript{
    repeated OrderScript order_script = 1;
    
}


enum ORDER_STATUS{
        default_status =0;
        processing = 1;
        completed =2;
        cancelled =3;
        refunded =4;
        archived =5;
        pending =6;
        exception =7;
        refunded_restock =9;
        draft =10;
        abandoned =11;
        suspicious =12;
        delete_restock =13;
        recurring = 14;
 }


message ResultResponse {

	bool success = 1;

    bool failure = 2;

    string code = 3;

    string message = 4;

    Invoice invoice = 5;

    Analytical customer_value = 6;

    repeated TimeLine order_timeline = 7;


    repeated OrdersRuleRequest rules = 8;

    OrdersListing order_listing = 9;

    OrdersRuleRequest rule = 10;

    repeated OrderTransactionDetails order_transaction_history = 11;

    lexmodo.v1.payments.PaymentResultDetails payment_confirmation =12;

    LabelData label_data =13;


    OPC opc = 14;


    PackingSlip packing_slip = 15;


    OrdersScript orders_script = 16;

    string script_result = 17;

    repeated OrderReports sales_report = 18; 


    OrdersRecurringSettings order_recurring_settings = 19;
}

message PackingSlip {
    oneof packing_data{
        string invoice_uuid = 1;
        Invoice invoice = 2;
    }
    string packing_slip_template = 3;
    string packing_slip_data = 4;
    bool save_packing_data = 5;
    string tracking_id = 6;
}

message OPC {

    string access_token = 1;
    string invoice_uuid = 2;
    string email_message = 3;
    bool   send_email = 4;

}
message OrderTransactionDetails{

    string provider_name =1;
    uint32 provider_id =2;
    lexmodo.v1.payments.PaymentResultDetails transaction_details =3;

    uint64 create_time =4;
    uint32 total_amount_used_refund = 5;
    uint64 last_update =6;
    string order_transaction_details_id = 7;
}

message Refunds{
    repeated Invoice refunded_orders =1;
}

message RuleReplace{

    uint32 cart_uuid = 1;
    uint32 before_cart_uuid = 2;

}

message LabelData {
    
    bytes Content = 1;
    
}

message RuleSortBy {

    string column_name =1;
    enum SORT{
        asc =0;
        desc=1;
    }
    SORT sort_order =2;
}

message OrdersRuleRequest{
    string rule_id = 1;
    string rule_name = 2;
    string customer_id = 3;
    string rule_query = 4;
    repeated RuleSortBy sort_by = 5;
    
    bool store_view = 6;
    repeated RuleReplace sort_rule = 7;
    map<string,string> custom_data = 8;
    uint64 sort_order =9;
    OrdersListing orders_listing =10;

} 


message OrdersListing{

    string rule_id  = 1;
    string associated_rule_id = 2;
    uint32 page_num = 3;
    uint32 total_result = 4;
    uint32 display_result = 5;
    repeated Invoice invoice_listing = 6;
    string rule_query = 7;
    repeated RuleSortBy sort_by = 8;
    string pit =9;
}

message InvoiceList{

    string invoice_uuid =1;

    string invoice_id =2;

    lexmodo.v1.money.Money money =3;

    uint64 invoice_date =5;

}


message TimeLineAction{

    enum ACTION_STATUS{
        none_action_status = 0;
        add_line_items =1 ;
        remove_line_items = 2;
        add_comment =3;
        add_custom_shipping =4;
        add_custom_order_module = 5;
        remove_custom_shipping = 6;
        remove_custom_order_module = 7;
        add_line_item_price_adjustment = 8;
        remove_line_item_price_adjustment = 9;
        email_invoice =10;
        collect_payment =11;
        created_draft_order =12;
        duplicated_order =13;
        edit_tags = 14;
        attach_customer=15;
        add_shipping_address = 16;
        update_shipping_method = 17;
        update_customer_email = 18;
        created_order = 19;
        add_internal_comment =20;
        customer_payed_outstanding_balance = 21;
        add_order_module = 22;
        remove_order_module = 23;
        order_shipped =24;
        order_refunded =25;
        item_shipped =26;
        change_order_status =27;

    }

    ACTION_STATUS action_type =1;

    string comment =2;
}

message TimeLine{

    
    string timeline_admin_id =1;
    
    string timeline_admin_name = 2;
    
    repeated TimeLineAction timeline_action = 3;
    
    uint64 timeline_date =4;
}   

message Analytical{

    string customers_id = 1;

    uint32 total_number_orders = 2;

    repeated InvoiceList past_orders = 3;

}

 enum FULFILLED_STATUS{

        none_FULFILLED_status = 0;
        unfulfilled = 1;
        fulfilled = 2;
 }

message OrdersEmptyRequest{

}


message Invoice{

    string invoice_uuid =1;

    string invoice_id =2;

    repeated lexmodo.v1.order.invoice.items.InvoiceLineItem invoice_line_items =3;

    uint64 invoice_date =5;

    lexmodo.v1.address.Address bill_to  =6;

    lexmodo.v1.address.Address ship_to  = 7;

    
    string customers_id = 8;
    string customers_email_address = 9 ;

    enum PAYMENT_STATUS{
        unpaid =0;
        capture = 1;
        refunded =2;
        pending = 3;
        authorized = 4;
        partially_paid = 5;
    }

    lexmodo.v1.money.Money payments_collected =10;

    lexmodo.v1.money.Money payments_owed =11;

    repeated string tags =12;

    FULFILLED_STATUS fulfillment_status =13;



    string shipping_method =14;

    repeated lexmodo.v1.order.modules.OrderTotal order_total = 15;

    string payment_method = 16;
    string payment_processor_code = 17;
    PAYMENT_STATUS payment_status =18;
    lexmodo.v1.money.Money order_value = 19;

    google.protobuf.StringValue customer_note = 20;

    uint32 number_of_order_items = 21;

    bool order_is_taxable = 22;

    map<string,int64> invoice_line_items_map = 23;

    bool require_module_reloads = 24;

    map<string, bool> order_module_manual_edit = 25;

    uint64 client_id =26;

    repeated lexmodo.v1.order.modules.OrderTotal payments_collected_order_total = 27;

    Refunds refunded_invoices =28;

    ORDER_STATUS order_status =29;

   google.protobuf.StringValue refund_reason = 30;

   google.protobuf.StringValue order_update_code = 31;

   string order_origin_ip = 32;
}



message TrackingInfo{
    
    string tracking_id =1;
    string invoice_uuid =2;
}

message CustomLineItem{
    string line_item_name = 1;
    double line_item_qty  = 2;
    uint32 line_item_price = 3;
    google.protobuf.StringValue orders_item_id =4;
}

message FULFILLEDItems {

    string  orders_item_id =1;

    lexmodo.v1.order.invoice.items.TrackingInfo tracking_info =2;


}

message OrderLineItemsUpdate{

    string invoice_uuid = 1;
    repeated OrdersLineItemsRequest order_line_items_update = 2;

    repeated CustomLineItem order_line_custom_line_items = 3;

    repeated FULFILLEDItems order_line_fulfilled_items =4;

    uint64 delay_task = 5;

}

message OrderLineItemPriceAdjustment{

    string invoice_uuid = 1;

    string  orders_item_id =2;

    lexmodo.v1.order.invoice.items.OrderLineItemPriceAdjust  orders_item_price_adjust = 3;

    bool remove_price_adjustments = 4;
}




message OrdersLineItemsRequest{


    google.protobuf.StringValue orders_item_id =1;

    google.protobuf.StringValue orders_line_item_products_products_id  = 2;

    google.protobuf.StringValue orders_line_item_products_variants_id  = 3;

    double orders_line_item_qty = 4;

    lexmodo.v1.order.invoice.items.OrderLineItemPriceAdjust  orders_line_price_adjust = 5;

    uint32 reserve_order_item = 6;

    bool restock_item = 7;

    repeated lexmodo.v1.carts.CustomProperties properties = 8;
    
}

message OrdersLineItemsCustomFieldRequest{

    string invoice_uuid = 1;

    string orders_item_id =2;

    enum ACTION_SET{
        SET = 0;
        DELETE =1;
    }

    ACTION_SET action_update =3;

    string key =4;
    
    string value =5;
}



message OrderReports{
    uint32 year = 1;
    uint32 month = 2;
    uint32 day = 3;
    repeated   lexmodo.v1.order.modules.OrderTotal order_module = 4;
    uint32 total_orders = 5;
    bool return_refunds = 6;
    repeated lexmodo.v1.order.invoice.items.InvoiceLineItem invoice_line_items =7;

    bool return_invoice_line_items = 8;
}

message MigrateOrderRequest{
    string invoice_uuid =1;
    string customer_id = 2;
    google.protobuf.StringValue OverWriteEmail =3;
}

message OrderRecurringTargetKey{
    string target_key = 1; //The name of the Propery key 
    map<string, uint32> target_values = 2; //The name of Propery value = Number of Days
    google.protobuf.BoolValue set_date = 3; //To force recurring orders on a specific timeframe
}
message OrdersRecurringSettings{
    uint32 max_failed_cycles = 1;
    bool reset_after_success = 2;
    repeated OrderRecurringTargetKey orders_recurring_target = 3;
    bool pause_all_recurring = 4; //After unpausing all orders will start be processed again using the start date as now and Freq for next billing
    bool validate_stock_every_run = 5; //If product is out of stock then the recurring order won't be processed
    google.protobuf.StringValue special_recurring_rules =6;
}

message OrdersRequest{
    

	lexmodo.v1.carts.CartRequest cart =1; // cart & customer id  
	lexmodo.v1.shipping.ShippingQuoteRequest shipping_info = 2; //dynaimc rates that you get from GetShippingMethods
	google.protobuf.StringValue coupon_code  = 3;
	google.protobuf.Int32Value store_credit = 4;
    repeated CustomLineItem custom_line_items = 6;
    uint32 reserve_order = 7;
    google.protobuf.StringValue customer_note = 8;
    repeated string tags = 9;
    lexmodo.v1.order.modules.OrderTotal order_module = 10;
    string invoice_uuid =11;
    Analytical customer_value = 12;

    TimeLineAction timeline_action = 13;

    lexmodo.v1.payments.PaymentRequest payment = 14;

    google.protobuf.Int32Value invoice_id_numeric = 15;

    google.protobuf.BoolValue order_is_taxable = 16;

    bool show_only_unpaid_items = 17;

    google.protobuf.StringValue replaces_order_uuid = 18;
    
    google.protobuf.StringValue gift_code = 19;


    ORDER_STATUS order_status =20;

    google.protobuf.Int32Value use_outstanding_balance = 21;

    google.protobuf.BoolValue allow_duplicate =22;
}


message RefundItems {

    string  orders_item_id =1;

    double orders_line_item_qty = 2; 
}

message RefundRequest{
    
    string invoice_uuid = 1;
    
    map<string, double> refund_items =2;

    repeated lexmodo.v1.order.modules.OrderTotal order_modules = 3;

    bool restock_item =4;

    google.protobuf.StringValue refund_reason = 5;

    lexmodo.v1.money.Money manual_refund = 6;
}
